--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="version_name">Version %1$s</string>
     <string name="btn_pass">Skip</string>
     <string name="login_account">Account</string>
-    <string name="please_input_account">your username</string>
+    <string name="please_input_account">Enter account</string>
     <string name="login_password">Password</string>
     <string name="remember_password">Remember Password</string>
     <string name="forget_password_question">Forgot password?</string>
@@ -948,8 +948,8 @@
     <string name="self_limit_froze_impotent_6">After the self-exclusion expires, your account will be automatically reactivated.</string>
     <string name="text_chose_language">Select your language</string>
     <!-- 複式串關詳情 -->
-    <string name="password_hint">your login password</string>
-    <string name="account_hint">your username</string>
+    <string name="password_hint">Enter your password</string>
+    <string name="account_hint">Enter account</string>
     <string name="submit_success">submitted successfully</string>
     <!-- 搜尋 -->
     <string name="text_search">Search</string>
