--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1292,7 +1292,7 @@
     <string name="ou_odd">Tỷ lệ cược Châu Âu</string>
     <string name="home_in_play">Trong trận</string>
     <string name="total_reward_amount">Jackpot tích luỹ</string>
-    <string name="hot_elec_game">Game thưởng khủng</string>
+    <string name="hot_elec_game">Game jackpot Hot</string>
     <string name="go_back_top">Về đầu trang</string>
     <string name="win_line">Chủ &amp; Khách</string>
     <string name="home_all_game">Tất cả game</string>
