--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1351,6 +1351,20 @@
     <string name="str_bet_other_game">Cược thị trường khác</string>
     <string name="str_check_bets">Chi tiết</string>
     <string name="str_press_again_to_exit_the_program">Vui lòng xác nhận lại lối thoát</string>
+    <string name="str_odds_changed">Tỷ lệ cược thay đổi</string>
+    <string name="str_bet_slip_not_confirm_for_a_long_time">Đơn cược chưa xác nhận trong thời gian dài</string>
+    <string name="str_exceeding_limit_for_the_event_or_market">Vượt quá giới hạn cược trận đấu hoặc thị trường</string>
+    <string name="str_market_closed_please_try_later">Thị trường đã đóng, vui lòng thử lại sau</string>
+    <string name="str_match_closed">Trận đấu đã kết thúc</string>
+    <string name="str_match_be_suspended">Trận đấu tạm dừng</string>
+    <string name="str_amount_wrong">Số tiền không chính xác</string>
+    <string name="str_less_than_min_bet">Dưới mức đặt cược tối thiểu</string>
+    <string name="str_only_one_type_of_ball_can_be_used_parlay">Chỉ cùng một loại bóng mới được sử dụng nối tiếp</string>
+    <string name="str_parlay_exceed_the_ties_limit">Số lượng liên kết vượt quá giới hạn </string>
+    <string name="str_self_exclusion">Tự loại trừ</string>
+    <string name="str_match_be_suspended_or_closed_please_check">Trận đấu tạm dừng hoặc đóng, vui lòng kiểm tra</string>
+    <string name="str_parlay_is_not_allowed_in_championship_matches">Các trận đấu vô địch bị cấm cược xâu</string>
+    <string name="str_parlay_type_wrong">Kiểu cược xâu không chính xác</string>
     <!--投注改版-->
     <string name="format_error">Định dạng không phù hợp</string>
     <string name="over_size">Tệp quá lớn</string>
