--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -710,7 +710,7 @@
     <string name="credit_bet_amount_all">Tổng hạn mức tín dụng</string>
     <string name="credit_bet_amount_remain">Hạn mức tín dụng còn lại</string>
     <string name="credit_bet_settle">Kết thúc</string>
-    <string name="credit_bet_remark">ghi chú</string>
+    <string name="credit_bet_remark">Ghi chú</string>
     <string name="credit_record_remain">Thời tian thanh toán đếm ngược</string>
     <string name="credit_record_quota">Tổng quyết toán:</string>
     <string name="credit_record_day">%s ngày</string>
