--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1196,8 +1196,8 @@
     <string name="correct">Cược tỷ số</string>
     <string name="hint_bet_limit_range">Giới hạn %1$s-%2$s</string>
     <string name="submitting">Đơn cược đang gửi</string>
-    <string name="bet_receipt_bet_quota_with_sign">Tiền Cược(%s)：</string>
-    <string name="bet_receipt_win_quota_with_sign">Ước tính thắng(%s)：</string>
+    <string name="bet_receipt_bet_quota_with_sign">Tiền Cược：</string>
+    <string name="bet_receipt_win_quota_with_sign">Ước tính thắng：%s</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
