--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1240,8 +1240,8 @@
 
     <string name="hint_bet_limit_range">Limit %1$s-%2$s</string>
     <string name="submitting">Submitting</string>
-    <string name="bet_receipt_bet_quota_with_sign">Stake(%s)：</string>
-    <string name="bet_receipt_win_quota_with_sign">To Win(%s)：</string>
+    <string name="bet_receipt_bet_quota_with_sign">Stake：</string>
+    <string name="bet_receipt_win_quota_with_sign">To Win：%s</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
