--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1369,9 +1369,9 @@
     <string name="str_if_accept_odds_changes_title">Whether to accept the odds change</string>
     <string name="str_if_accept_odds_changes_des_subtitle">Match odds can change at any time (especially during in-play). In order to give you a better betting experience. You can choose the following three betting methods.</string>
     <string name="str_if_accept_odds_changes_des1">1. Accept any odds — when this option is selected. We\'ll give you a slip based on the latest odds.</string>
-    <string name="str_if_accept_odds_changes_des2">2. Accept best odds - When selecting this option, if the latest odds are better than your chosen odds, we will generate a slip. If the latest odds are lower than the odds you have chosen, we do not generate a slip and remind you of the odds change
+    <string name="str_if_accept_odds_changes_des2">2. Accept best odds - When selecting this option, if the latest odds are better than your chosen odds, we will generate a slip. If the latest odds are lower than the odds you have chosen, we do not generate a slip and remind you of the odds change.
 </string>
-    <string name="str_if_accept_odds_changes_des3">3. Not accept odds changes - if the latest odds are different from the odds you selected, we will not generate a slip and and remind you of the odds change</string>
+    <string name="str_if_accept_odds_changes_des3">3. Not accept odds changes - if the latest odds are different from the odds you selected, we will not generate a slip and and remind you of the odds change。</string>
     <string name="str_ok_i_got_it">Ok, I see</string>
     <string name="str_max_bet_money">Max bet limit:%1$s</string>
     <string name="str_odds_already_changed_check_please">The odds changed. Please confirm latest odds</string>
