--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1129,6 +1129,7 @@
     <string name="more_info">更多信息</string>
     <string name="e_game">棋牌</string>
     <string name="new_games_beta">新游戏，测试版</string>
+    <string name="new_games">新游戏</string>
 
     <string name="work_time_">营业时间：</string>
     <string name="phone_">电话：</string>
