--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -633,7 +633,7 @@
     <string name="feedback_not_reply_yet">Wait for feedback</string>
     <string name="one_key_recovery">One-click withdraw</string>
     <string name="platform_account_money">Account Balance</string>
-    <string name="one_button_click_will_recycle_all_money_into_account">· One-click withdraw transfers the balance of all other accounts to the platform account.</string>
+    <string name="one_button_click_will_recycle_all_money_into_account">*One-click withdraw transfers the balance of all other accounts to the platform account.</string>
     <string name="out_account">Transfer out of account</string>
     <string name="in_account">Transfer into the account</string>
     <string name="transfer_money">Transfer amount</string>
