--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -628,7 +628,7 @@
     <string name="out_account">Chuyển ra tài khoản</string>
     <string name="in_account">Chuyển vào tài khoản</string>
     <string name="transfer_money">số tiền chuyển đổi</string>
-    <string name="transfer_money_minimum">hạn mức 1.000 trở lên</string>
+    <string name="transfer_money_minimum">hạn mức %s trở lên</string>
     <string name="confirm_transform">xác nhận chuyển đổi</string>
     <string name="plat_money">Số dư kênh</string>
     <string name="money">Số tiền</string>
