--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1113,8 +1113,8 @@
     <!--region 20220714 新版投注單-->
     <string name="bet_win">To Win</string>
     <string name="bet_stake">Stake</string>
-    <string name="total_capital">Total Stake(%s)：</string>
-    <string name="total_win_amount">EST Winning(%s)：</string>
+    <string name="total_capital">Total Stake：%s</string>
+    <string name="total_win_amount">EST Winning：</string>
     <string name="delete_bet">Delete</string>
     <string name="btn_login_bet">Log in before betting</string>
     <string name="confirm_single_bets">Confirm %d Single Bets</string>
