--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1215,8 +1215,8 @@
 
     <string name="hint_bet_limit_range">Limit %1$s-%2$s</string>
     <string name="submitting">Submitting</string>
-    <string name="bet_receipt_bet_quota_with_sign">Stake：</string>
-    <string name="bet_receipt_win_quota_with_sign">To Win：%s</string>
+    <string name="bet_receipt_bet_quota_with_sign">Stake</string>
+    <string name="bet_receipt_win_quota_with_sign">To Win</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
@@ -1387,4 +1387,5 @@
     <string name="str_parlay_is_not_allowed_in_championship_matches">Parlay is not allowed in championship matches</string>
     <string name="str_parlay_type_wrong">Parlay type wrong</string>
     <string name="new_games">New Games</string>
+    <string name="bet_info_add_bet_failed">Bet Failed</string>
 </resources>
