--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1240,8 +1240,8 @@
 
     <string name="hint_bet_limit_range">Limit %1$s-%2$s</string>
     <string name="submitting">Submitting</string>
-    <string name="bet_receipt_bet_quota_with_sign">Stake：</string>
-    <string name="bet_receipt_win_quota_with_sign">To Win：%s</string>
+    <string name="bet_receipt_bet_quota_with_sign">Stake</string>
+    <string name="bet_receipt_win_quota_with_sign">To Win</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
@@ -1348,7 +1348,7 @@
     <string name="Unpin">Unpin</string>
     <string name="new_game_and_testing">(New Games | Beta)</string>
     <string name="dont_have_slot_game">No games</string>
-    <string name="bad_param">参数错误</string>
+    <string name="bad_param">Bad Param</string>
     <string name="error_verification_code_forget">Verify code wrong</string>
     <string name="find_back_password">Recover password</string>
     <string name="place_enter_your_account">Please enter user name</string>
@@ -1406,6 +1406,7 @@
     <string name="update_voucher">Upload receipt</string>
     <string name="no_select_file">Unselected files</string>
     <string name="str_press_again_to_exit_the_program">"Please confirm to exit again  "</string>
+    <string name="bet_info_add_bet_failed">Bet Failed</string>
     <string name="new_games">New Games</string>
 
 
