转换成功翻译修改

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -633,7 +633,7 @@
     <string name="plat_money">Số dư kênh</string>
     <string name="money">Số tiền</string>
     <string name="transfer_platform">Kênh chuyển đổi</string>
-    <string name="transfer_money_succeed">Số tiền chuyển đổi thành công</string>
+    <string name="transfer_money_succeed">Chuyển đổi hạn mức thành công</string>
     <string name="third_game_df">bắn cá Đức Phong</string>
     <string name="third_game_sbty">Sabah sports</string>
     <string name="third_game_ag">Kênh AG</string>
