--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -217,7 +217,7 @@
     <string name="ice_hockey">Ice Hockey</string>
     <string name="boxing">Quyền anh</string> <!--C029-->
     <string name="snooker">Bida</string>
-    <string name="cricket">Bóng gậy</string>
+    <string name="cricket">Cricket</string>
     <string name="baseball">Bóng chày</string>
     <string name="rugby_football">Bóng bầu dục</string>
     <string name="america_football">Bóng đá Mỹ</string>
