--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -970,10 +970,10 @@
     <string name="btm_navigation_affiliate">Đại lý</string>
     <string name="expire_date">Thời gian hết hạn chứng chỉ</string>
     <string name="self_limit_froze_impotent_1">Tự loại trừ có hiệu lực ngay sau khi thiết lập</string>
-    <string name="self_limit_froze_impotent_2">Chúng tôi sẽ giữ số dư của bạn trong khoảng thời gian tự loại trừ đã định.</string>
+    <string name="self_limit_froze_impotent_2">Chúng tôi sẽ giữ toàn bộ số dư của bạn trong khoảng thời gian tự loại trừ mà bạn đã đặt. Tuy nhiên, nếu đã hơn 6 tháng kể từ lần đăng nhập cuối cùng, OKBET sẽ có quyền tính phí quản lý hàng tháng cho bạn cho đến khi số dư tài khoản bằng không.</string>
     <string name="self_limit_froze_impotent_3">Nếu bạn đăng ký tự loại trừ trong các trò chơi trò chơi khác, nó sẽ không tự động áp dụng cho trò chơi này.</string>
     <string name="self_limit_froze_impotent_4">Trong thời gian tự loại trừ, nếu bạn cố gắng mở một tài khoản mới, tài khoản có thể bị đóng băng sau khi hệ thống phát hiện ra.</string>
-    <string name="self_limit_froze_impotent_5">Trong thời gian tự loại trừ, bạn có thể liên hệ với bộ phận dịch vụ khách hàng để hủy chức năng tự loại trừ.</string>
+    <string name="self_limit_froze_impotent_5">Trong thời gian tự loại trừ, bạn sẽ không thể tắt tính năng này cho đến khi hết thời gian loại trừ tối thiểu.</string>
     <string name="self_limit_froze_impotent_6">Sau khi quá trình tự loại trừ hết hạn, tài khoản của bạn sẽ tự động được kích hoạt lại.</string>
     <string name="text_chose_language">Chọn ngôn ngữ của bạn</string>
     <!-- 複式串關詳情 -->
@@ -1377,4 +1377,8 @@
     <string name="current_login_password">Mật khẩu đăng nhập hiện tại</string>
     <string name="new_games">New Games</string>
     <string name="bet_info_add_bet_failed">Đặt cược thất bại</string>
+    <string name="pls_enter_days_format">Mời nhập số ngày (≥%d ngày)</string>
+    <string name="more_than_days_format">Phải hơn %d ngày</string>
+    <string name="overtime_score">Điểm bù giờ</string>
+    <string name="regular_score">Điểm chính thức</string>
 </resources>
