--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1379,6 +1379,6 @@
     <string name="bet_info_add_bet_failed">Đặt cược thất bại</string>
     <string name="pls_enter_days_format">Mời nhập số ngày (≥%d ngày)</string>
     <string name="more_than_days_format">Phải hơn %d ngày</string>
-    <string name="overtime_score">Điểm bù giờ</string>
-    <string name="regular_score">Điểm chính thức</string>
+    <string name="overtime_score">Bù giờ</string>
+    <string name="regular_score">Chính thức</string>
 </resources>
