--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1410,8 +1410,8 @@
     <string name="new_games">New Games</string>
     <string name="pls_enter_days_format">Please enter days (≥%d days)</string>
     <string name="more_than_days_format">Must be more than %d days</string>
-    <string name="overtime_score">Overtime score</string>
-    <string name="regular_score">Regular score</string>
+    <string name="overtime_score">Overtime</string>
+    <string name="regular_score">Regular</string>
 
 
 </resources>
