--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1103,6 +1103,7 @@
     <string name="total_capital">Tổng tiền đặt cược：%s</string> <!--F008-->
     <string name="total_win_amount">Ước tính thắng：</string> <!--F005-->
     <string name="delete_bet">Xóa bỏ</string>
+    <string name="delete_bet_all">Xóa tất cả</string>
     <string name="btn_login_bet">Đăng nhập để đặt cược</string>
     <string name="confirm_single_bets">Xác nhận %d Cược đơn</string>
     <string name="confirm_multiple_bets">Xác nhận %d Cược xâu</string>
