--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1040,7 +1040,7 @@
 
     <string name="current_corner">Tổng Số Hiện Tại:</string>
     <string name="cancel_auto">Từ chối</string>
-    <string name="cancel_manual">Vô hiệu</string>
+    <string name="cancel_manual">Hoàn tiền</string>
     <string name="error_input_has_blank"> Đầu vào không chính xác. Chỉ sử dụng tiếng Anh, không nhập khoảng trắng liên tục.</string>
 
     <!--region 確認年齡彈窗-->
