--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1391,5 +1391,5 @@
     <string name="pls_enter_days_format">Please enter days (≥%d days)</string>
     <string name="more_than_days_format">Must be more than %d days</string>
     <string name="overtime_score">Overtime</string>
-    <string name="regular_score">Regular</string>
+    <string name="regular_score">score with overtime</string>
 </resources>
