--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1380,5 +1380,5 @@
     <string name="pls_enter_days_format">Mời nhập số ngày (≥%d ngày)</string>
     <string name="more_than_days_format">Phải hơn %d ngày</string>
     <string name="overtime_score">Bù giờ</string>
-    <string name="regular_score">Chính thức</string>
+    <string name="regular_score">Điểm gồm bù giờ</string>
 </resources>
