--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1410,5 +1410,6 @@
     <string name="bet_info_add_bet_failed">Bet Failed</string>
     <string name="new_games">New Games</string>
     <string name="str_bet_way">bet way</string>
+    <string name="str_in_play_bet_confirmed">In-play bet confirmed</string>
 
 </resources>
