--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1378,4 +1378,5 @@
     <string name="current_login_password">Mật khẩu đăng nhập hiện tại</string>
     <string name="new_games">New Games</string>
     <string name="bet_info_add_bet_failed">Đặt cược thất bại</string>
+    <string name="str_in_play_bet_confirmed">Đang xác nhận cược trong trận</string>
 </resources>
