--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1392,4 +1392,5 @@
     <string name="update_voucher">上传凭证</string>
     <string name="no_select_file">未选择文件</string>
     <string name="str_bet_way">投注方式</string>
+    <string name="str_in_play_bet_confirmed">滚球注单确认中</string>
 </resources>
