--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -546,8 +546,8 @@
     <string name="text_bank_card_modify_success">编辑银行卡成功</string>
     <string name="text_e_wallet_modify_success">编辑eWallet成功</string>
     <string name="text_crypto_modify_success">编辑虚拟币成功</string>
-    <string name="bet_receipt_bet_quota">投注金额：</string>
-    <string name="bet_info_list_win_quota">可赢金额</string>
+    <string name="bet_receipt_bet_quota">投注金额:</string>
+    <string name="bet_info_list_win_quota">可赢金额:</string>
     <string name="bet_receipt_win_quota">可赢金额</string>
 
     <string name="bet_info_add_bet_failed">投注失败</string>
