--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1383,4 +1383,5 @@
     <string name="overtime_score">Bù giờ</string>
     <string name="regular_score">Chính thức</string>
     <string name="score_with_overtime">Điểm (gồm bù giờ)</string>
+    <string name="self_limit_error_format">Định dạng trường không chính xác, vui lòng nhập số nguyên %d ~ %d.</string>
 </resources>
