--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1396,4 +1396,5 @@
     <string name="overtime_score">加时比分</string>
     <string name="regular_score">常规比分</string>
     <string name="score_with_overtime">总分（含加时）</string>
+    <string name="self_limit_error_format">资料格式不符，请输入 %d~%d 整数</string>
 </resources>
