--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -977,7 +977,7 @@
 
     <!--歷史紀錄start-->
     <string name="text_account_history_time">Transaction time</string>
-    <string name="text_account_history_number">Order no.</string>
+    <string name="text_account_history_number">Order no</string>
     <string name="text_account_history_amount">Transaction amount</string>
     <string name="text_account_history_balance">Balance</string>
 
@@ -1111,7 +1111,7 @@
     <string name="current_time">Time</string>
 
     <!--region 20220714 新版投注單-->
-    <string name="bet_win">To Win</string>
+    <string name="bet_win">Win</string>
     <string name="bet_stake">Stake</string>
     <string name="total_capital">Total Stake：%s</string>
     <string name="total_win_amount">EST Winning：</string>
@@ -1216,7 +1216,7 @@
     <string name="hint_bet_limit_range">%1$s-%2$s</string>
     <string name="submitting">Submitting</string>
     <string name="bet_receipt_bet_quota_with_sign">Stake</string>
-    <string name="bet_receipt_win_quota_with_sign">To Win</string>
+    <string name="bet_receipt_win_quota_with_sign">Win</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
@@ -1389,4 +1389,6 @@
     <string name="new_games">New Games</string>
     <string name="bet_info_add_bet_failed">Bet Failed</string>
     <string name="str_in_play_bet_confirmed">In-play bet confirmed</string>
+    <string name="str_odds_description">Odds Description</string>
+    <string name="str_bet_parlay">Parlay</string>
 </resources>
