--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1199,6 +1199,9 @@
     <string name="submitting">Đơn cược đang gửi</string>
     <string name="bet_receipt_bet_quota_with_sign">Tiền Cược</string>
     <string name="bet_receipt_win_quota_with_sign">Thắng</string>
+
+    <string name="bet_receipt_bet_quota_with_sign_money">Tiền Cược：</string>
+    <string name="bet_receipt_win_quota_with_sign_max">Thắng：</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
