--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -550,7 +550,7 @@
     <string name="text_e_wallet_modify_success">Chỉnh sửa eWallet thành công</string>
 
     <string name="bet_receipt_bet_quota">Tiền Cược：</string>
-    <string name="bet_info_list_win_quota">Ước tính thắng：</string> <!--I010-->
+    <string name="bet_info_list_win_quota">Ước thắng：</string> <!--I010-->
     <string name="bet_receipt_win_quota">Số tiền có thể thắng：</string>
     <string name="bet_info_add_bet_success">Đặt cược thành công</string>
     <string name="bet_info_in_play_score">%1$s (%2$s-%3$s)</string>
@@ -1100,8 +1100,8 @@
     <!--region 20220714 新版投注單-->
     <string name="bet_win">Thắng</string>
     <string name="bet_stake">Tiền Cược</string>
-    <string name="total_capital">Tổng tiền đặt cược：%s</string> <!--F008-->
-    <string name="total_win_amount">Ước tính thắng：</string> <!--F005-->
+    <string name="total_capital">Tiền Cược：%s</string> <!--F008-->
+    <string name="total_win_amount">Ước thắng：</string> <!--F005-->
     <string name="delete_bet">Xóa bỏ</string>
     <string name="delete_bet_all">Xóa tất cả</string>
     <string name="btn_login_bet">Đăng nhập để đặt cược</string>
