--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1126,7 +1126,7 @@
     <string name="confirm_multiple_bets">Confirm %d Multiple Bets</string>
     <string name="btn_remove_closed_selections">Remove closed selections</string>
     <string name="please_enter_correct_amount">Please enter the correct bet amount</string>
-    <string name="bet_info_list_bet">Stake</string>
+    <string name="bet_info_list_bet">Betting</string>
     <string name="bet_info_bet">Stake</string>
     <!--endregion-->
 
