--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1404,4 +1404,5 @@
     <string name="self_limit_error_format">资料格式不符，请输入 %d~%d 整数</string>
     <string name="str_bet_way">投注方式</string>
     <string name="str_in_play_bet_confirmed">滚球注单确认中</string>
+    <string name="str_odds_description">赔率说明</string>
 </resources>
