--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1099,9 +1099,9 @@
 
     <!--region 20220714 新版投注單-->
     <string name="bet_win">Thắng</string>
-    <string name="bet_stake">Tiền Cược</string>
-    <string name="total_capital">Tiền Cược：%s</string> <!--F008-->
-    <string name="total_win_amount">Ước thắng：</string> <!--F005-->
+    <string name="bet_stake">Cược</string>
+    <string name="total_capital">Tổng tiền đặt cược：%s</string> <!--F008-->
+    <string name="total_win_amount">Ước tính thắng：</string> <!--F005-->
     <string name="delete_bet">Xóa bỏ</string>
     <string name="delete_bet_all">Xóa tất cả</string>
     <string name="btn_login_bet">Đăng nhập để đặt cược</string>
