--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1115,7 +1115,7 @@
     <string name="current_time">Time</string>
 
     <!--region 20220714 新版投注單-->
-    <string name="bet_win">To Win</string>
+    <string name="bet_win">Win</string>
     <string name="bet_stake">Stake</string>
     <string name="total_capital">Total Stake：%s</string>
     <string name="total_win_amount">EST Winning：</string>
