--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1249,6 +1249,7 @@
     <string name="half_first_short">Hiệp 1</string>
     <string name="half_second_short">Hiệp 2</string>
     <string name="unbound_bank_card">Bạn chưa mặc định %1$s</string>
+    <string name="str_bet_way">Kiểu cược</string>
     <string name="change_other_ID_photos">Thay ảnh ID khác</string>
     <string name="customer_service">Nếu cần trợ giúp, vui lòng&#160;</string>
     <string name="not_sign_up">Chưa có tài khoản</string>
